<resources>
    <string name="app_name">E-Tech Services</string>
    <string name="text_awal">Buy Some \nStuff For Your Needs!</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="text_login_tittle">E-tech Servies</string>
    <string name="hint_login_pswd">Password</string>
    <string name="text_login_login">login</string>
    <string name="text_login_guest_login">Guest Login</string>
    <string name="text_tittle_sign_to_shopping">Sign to shopping</string>
    <string name="text_tittle_home">Which subject\nyou looking for?</string>
    <string name="text_home_btnmusic">Music</string>
    <string name="text_home_btne_money">e-Money</string>
    <string name="text_home_btnsport">Sport</string>
    <string name="text_home_btnautomotive">Automotive</string>
    <string name="text_home_btnfashion">Fashion</string>
    <string name="text_home_btnelectronic">Electronic</string>
    <string name="text_home_btnaccesories">Accesories</string>
    <string name="text_home_btnkitchen">Kitchen</string>
    <string name="text_home_btnfood_drinks">FOOD - DRINKS</string>
    <string name="text_login_username">Username</string>
    <string name="text_tittle_register">Sign up to start \nShopping</string>
    <string name="hint_register_example_tech_com">example@tech.com</string>
    <string name="hint_register_name">name</string>
    <string name="hint_register_62_98829301902">+62 98829301902</string>
    <string name="hint_register_password">password</string>
    <string name="hint_register_retype_password">retype password</string>
    <string name="hint_register_btnregister">Register</string>
    <string name="text_sport_list_sport_item">LIST SPORT ITEM</string>
    <string name="text_tampilanawal_home">Home</string>
</resources>
