<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:text="@string/text_tittle_register"
        android:textColor="#EE5A5A"
        android:fontFamily="@font/opeita"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:id="@+id/edt_email"
        android:layout_marginBottom="10dp"
        android:textColor="#EE5A5A"
        android:hint="@string/hint_register_example_tech_com"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_marginBottom="10dp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:textColor="#EE5A5A"
        android:drawableStart="@drawable/ic_baseline_person_25"
        android:hint="@string/hint_register_name"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_number"
        android:textColor="#EE5A5A"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:hint="@string/hint_register_62_98829301902" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edt_pass"
        android:hint="@string/hint_register_password"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:textColor="#EE5A5A"
        android:drawableStart="@drawable/ic_baseline_lock_25"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/edt_rtpass"
        android:hint="@string/hint_register_retype_password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:textColor="#EE5A5A"
        android:layout_marginBottom="40dp"
        android:drawableStart="@drawable/ic_baseline_lock_25"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_regist"
        android:text="@string/hint_register_btnregister"
        android:background="@drawable/custom1"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"/>





</LinearLayout>