<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_tittle_sign_to_shopping"
        android:fontFamily="@font/opeita"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:textColor="#EE5A5A"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:id="@+id/image"
        android:layout_marginBottom="40dp"
        android:textColorHighlight="#EE5A5A"
        />

    <EditText
        android:padding="20dp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/text_login_username"
        android:id="@+id/username"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:padding="20dp"
        android:inputType="textPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/hint_login_pswd"
        android:layout_marginBottom="40dp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_login"
        android:text="@string/text_login_login"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_login_guest_login"
        android:textColor="#EE5A5A"
        android:id="@+id/trouble"
        android:textSize="19sp"/>

</LinearLayout>