<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".TampilanAwal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="8dp"
            android:textColor="#000000"
            android:text="@string/text_awal"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="260dp"
            android:layout_height="403dp"
            android:layout_above="@+id/sign_in"
            android:layout_below="@+id/t1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/man"
            android:contentDescription="@string/text_tampilanawal_home" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="204dp"
            android:layout_height="36dp"
            android:layout_above="@+id/sign_up"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:onClick="Sign_in"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="118dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="65dp"
            android:textColor="#EE5A5A"
            android:gravity="center"
            android:text="@string/register"
            android:onClick="regist"/>
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>